# feinaLive

./: .gitignore  README.md  nginx-rtmp.conf
backend/: README.md  __init__.py  config.example.yaml  config.yaml  debug_comments.py  main.py  migrate_up_uid.py  pyproject.toml  start.bat  start.ps1  start_dev.bat  test_llm.py
backend/EasyVtuber/: env_init.py  run_gpu.py  runner.py  test_gpu.py
backend/EasyVtuber-main/: .gitignore  runner.py
backend/EasyVtuber-main/ezvtuber-rt/ezvtb_rt/: ort_utils.py  tha4_student_ort.py
backend/EasyVtuber-main/src/: args.py  audio_client.py  ws_streamer.py
backend/EasyVtuber/data/images/: lambda_00.png.dis
backend/EasyVtuber/ezvtuber-rt/ezvtb_rt/: tha3_ort.py
backend/EasyVtuber/src/: debug_input_client.py  model_infer_client.py  mouse_client.py
backend/ai_vtuber/: runner.py
backend/ai_vtuber/ezvtuber-rt/ezvtb_rt/: tha4_ort.py
backend/ai_vtuber/src/: args.py  hybrid_input_client.py  main.py  model_infer_client.py
backend/ai_vtuber/src/utils/: pose_simplify.py
backend/apps/: config.py  config_router.py  db.py  exceptions.py  test_router.py
backend/apps/ai/: admin_commands.py  client.py  history.py  host_brain.py  prompt.py  router.py  tts.py
backend/apps/ai/memory/: __init__.py  summarizer.py  user_profile.py
backend/apps/ai/plugins/: __init__.py
backend/apps/bilibili/: __init__.py  client.py  handlers.py  models.py  router.py
backend/apps/easyvtuber/: __init__.py  router.py
backend/apps/image/: __init__.py
backend/apps/live/: danmaku_handler.py
backend/apps/live/bilibili/: client.py  handlers.py  router.py
backend/apps/live/music/: __init__.py  client.py  library.py  llm_verify.py  queue.py  router.py  service.py
backend/apps/music/: client.py  library.py  llm_verify.py  models.py  queue.py  router.py  service.py  up_videos.py
backend/core/: websocket.py
backend/services/: nginx_service.py
backend/tests/: test_admin_commands.py  test_ai_flow.py  test_music_control.py
doc/: README.md
doc/0.overview/: folder-structure.md  project-intro.md
doc/1.architecture/: module-interactions.md  system-overview.md  tech-stack.md
doc/3.frontend/: components.md  project-structure.md  stores.md
doc/4.business/: ai-reply-flow.md  avatar-flow.md  danmaku-flow.md  music-flow.md
doc/5.requirements/: functional-requirements.md  non-functional-requirements.md
docs/: dna-builder-api.md  frontend-api.md  frontend_architecture.md
fronted/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
fronted/src/: App.vue  (+1 more)
(+43 files in other folders)
